--- a/index.html
+++ b/index.html
@@ -13,12 +13,8 @@
   </head>
   <body>
     <div class="container">
-        <div class="column column-1">Column 1</div>
-        <div class="column column-2">Column 2</div>
-        <div class="column column-3">Column 3</div>
-        <div class="column column-4">Column 4</div>
-        <div class="column column-5">Column 5</div>
-        <div class="column column-6">Column 6</div>
+        
     </div>
   </body>
+  <script src="main.js"></script>
 </html>
